--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ default: &default
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  pool: <%= ENV.fetch("DB_POOL", 5) %>
 
 
 development:
@@ -81,18 +81,10 @@ test:
 production:
   primary: &primary_production
     <<: *default
-    database: odinbook_production
-    username: odinbook
-    password: <%= ENV["ODINBOOK_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: odinbook_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: odinbook_production_queue
-    migrations_paths: db/queue_migrate
+    url: <%= ENV["DATABASE_URL"] %>
   cable:
     <<: *primary_production
-    database: odinbook_production_cable
-    migrations_paths: db/cable_migrate
+  queue:
+    <<: *primary_production
+  cache:
+    <<: *primary_production
